--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.39.1",
-    "express": "^4.21.2",
+    "drizzle-orm": "^0.45.1",
+    "express": "^5.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
-    "pino": "^9.6.0",
+    "pino": "^10.3.1",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
-    "zod": "^3.24.1"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -39,5 +39,8 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
